--- a/style.css
+++ b/style.css
@@ -3,8 +3,51 @@
   src: url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf)
 }
 
-div {
+* { margin: 0; padding: 0;}
+
+.row {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+
+.row div:first-child{
+  position: relative;
+  flex: 1 1 0;
+  }
+
+.row div:last-child {
+  flex: 2 1 0;
+}
+
+.row div:first-child > img:last-child {
+  position: absolute;
+  max-height: 100%;
+  width: 100%;
+}
+
+.row div:first-child > div {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  height: 20%;
+  width: 100%;
+  top: 20%;
+  background: rgb(0, 0, 0, .5)
+}
+
+.row div:first-child > div:first-child > img {
+  position: absolute;
+  height: 80%;
+  top: 10%;
+  left: 25%;
+}
+
+.row div:first-child > div:first-child > p {
+  position: absolute;
+  left: 200px;
+  font-size: 6rem;
+  color: white;
   font-family: 'Norse Bold';
-  font-size: 32px;
-  color: black;
 }
