--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@
   src: url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf)
 }
 
-* { margin: 0; padding: 0;}
+* { margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif;}
+
+fieldset {
+  display: flex;
+  gap: 8px;
+  border: none;
+}
 
 .row {
   display: flex;
@@ -17,8 +23,42 @@
   }
 
 .row div:last-child {
+  display: flex;
+  justify-content: center;
+  background-color:whitesmoke;
   flex: 2 1 0;
 }
+
+.container {
+  display: flex;
+  flex-direction:column;
+  position: absolute;
+  max-height: 100%;
+  max-width: 90%;
+  gap: 8px;
+}
+
+.row > div:last-child > div:first-child > p:nth-of-type(1), 
+.row > div:last-child > div:first-child > p:nth-of-type(2) {
+  position: relative;
+  bottom: 45px;
+}
+
+.row > div:last-child > div:first-child > p:nth-of-type(2) {
+  position: relative;
+  bottom: 55px;
+}
+
+.row > div:last-child > div:first-child > p:nth-of-type(3) {
+  position: relative;
+  bottom: 35px;
+}
+
+.container:nth-child(1), 
+.container:nth-child(2), 
+.container:nth-child(3) {
+  flex: 1 1 0;
+} 
 
 .row div:first-child > img:last-child {
   position: absolute;
@@ -26,7 +66,7 @@
   width: 100%;
 }
 
-.row div:first-child > div {
+.row div:first-child > div:first-child {
   display: flex;
   align-items: center;
   position: absolute;
@@ -34,7 +74,8 @@
   height: 20%;
   width: 100%;
   top: 20%;
-  background: rgb(0, 0, 0, .5)
+  background: rgb(0, 0, 0, .5);
+  overflow: auto;
 }
 
 .row div:first-child > div:first-child > img {
@@ -50,4 +91,57 @@
   font-size: 6rem;
   color: white;
   font-family: 'Norse Bold';
+}
+
+.row > div:last-child > div:first-child > p {
+  font-size: 24px;
+  font-weight: 500;  
+}
+
+div.form_container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: left;
+  position: relative;
+  right: 45px;
+  flex: .5 1 0;
+  gap: 8px;
+  height: 300px;
+  width: 846px;
+  padding: 32px;
+  box-shadow:5px 5px 5px rgb(216, 216, 216);
+  background-color: white;
+}
+
+div.form_container > * {
+  flex: 1 1 0;
+}
+
+.container p:last-of-type {
+  position: relative;
+  top: 15px;
+  font-size: 14px !important;
+}
+
+input[type="submit"] {
+  width: 25%;
+  background-color: #596D48;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+input {
+  width: 100%;
+  padding: 6px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #E5E7EB;
+  border-radius: 4px;
+  box-sizing: border-box;
+
 }
